--- a/templates/BookingForm.html
+++ b/templates/BookingForm.html
@@ -203,6 +203,10 @@
       </select>
     </div>
   </div>
+  <div class="form-group">
+    <label for="JoiningDate">Joining Data</label>
+    <input name="JoiningDate" type="text" class="form-control" id="inputDate" placeholder="DD/MM/{{2020}}"/>
+  </div>
   <hr style="border-color:green">
   <hr style="border-color:green">
   <!-- END_BOOKING -->
